--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^1.2.1",
     "framer-motion": "^10.12.16",
     "next": "13.4.4",
+    "next-auth": "^4.22.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
