--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "supports-color": "8.1.1",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
     "zustand": "^4.3.8"
