--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
-    "clsx": "^1.2.1",
-    "eslint-config-next": "^13.4.5",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "eslint-config-next": "^13.5.6",
     "framer-motion": "^10.12.16",
-    "next": "^13.4.5",
+    "lucide-react": "^0.294.0",
+    "next": "^13.5.6",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
     "react": "^18.2.0",
@@ -25,8 +28,9 @@
     "react-hook-form": "^7.45.4",
     "react-icons": "^4.9.0",
     "supports-color": "8.1.1",
-    "tailwind-merge": "^1.14.0",
+    "tailwind-merge": "^2.1.0",
     "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.0.4",
     "zustand": "^4.3.8"
   },
